# kapsl-lite

./: .gitignore  Cargo.toml  DEMO.md  README.md  submission.md
docs/: ARCHITECTURE.md  LIMITATIONS.md
scripts/: build-aarch64-static.sh  export-submission.ps1  request-inference-result.py  request-mistral-image-result.py  request-voxtral-audio-result.py  request-voxtral-result.py  run-edge-preset-windows.ps1  send-webcam-to-mistral.py
src/: input_adapter.rs  loader.rs  main.rs  metrics.rs  package.rs  runtime.rs  system.rs  trigger.rs  tui.rs
