[package]
name = "kapsl-runtime-lite"
version = "0.1.0"
edition = "2024"
description = "Minimal single-binary runtime with TUI for edge devices"
license = "MIT"
default-run = "kapsl"

[[bin]]
name = "kapsl"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
crossbeam-channel = "0.5"
crossterm = "0.28"
futures = "0.3"
kapsl-backends = { path = "../kapsl-runtime/crates/kapsl-backends" }
kapsl-core = { path = "../kapsl-runtime/crates/kapsl-core" }
kapsl-engine-api = { path = "../kapsl-runtime/crates/kapsl-engine-api" }
kapsl-llm = { path = "../kapsl-runtime/crates/kapsl-llm" }
ratatui = { version = "0.29", default-features = false, features = ["crossterm"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
signal-hook = "0.3"

[dev-dependencies]
flate2 = "1"
tar = "0.4"
tempfile = "3"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.59", features = ["Win32_Foundation", "Win32_Security", "Win32_Storage_FileSystem", "Win32_System_IO", "Win32_System_Pipes", "Win32_System_ProcessStatus", "Win32_System_Threading"] }

[patch.crates-io]
esaxx-rs = { path = "../kapsl-runtime/patches/esaxx-rs" }
